# my-obs-plugin

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/scripts/: .Aptfile  build-macos  build-ubuntu
.github/scripts/utils.zsh/: check_macos
.github/workflows/: build-project.yaml  pr-pull.yaml
build-aux/: .run-format.zsh
cmake/: Coverage.cmake  EnsureUniversalOpenSSL.cmake  FetchUnity.cmake
cmake/common/: helpers_common.cmake
cmake/macos/: compilerconfig.cmake
scripts/: run-tests.sh
src/: main.c  plugin-browser.h  plugin-http.c  plugin-main.c  plugin-properties.c  plugin-support.c.in  plugin-text-source.c  plugin-xbox-auth.c  plugin-xbox-auth.h  plugin-xbox.c  plugin-xbox.h
src/common/: achievement.c  achievement.h  achievement_progress.c  achievement_progress.h  device.h  game.c  game.h  gamerscore.c  gamerscore.h  memory.h  token.c  token.h  types.c  types.h  unlocked_achievement.c  unlocked_achievement.h  xbox_identity.c  xbox_identity.h  xbox_session.c  xbox_session.h
src/configuration/: properties.c  properties.h
src/crypto/: crypto.c  crypto.h
src/diagnostics/: log.c.in  log.h
src/drawing/: image.c  image.h  text.c
src/encoding/: base64.c  base64.h  encoder.c  encoder.h
src/io/: state.c  state.cpp  state.h
src/net/browser/: browser.c  browser.h
src/net/http/: http.c  http.h
src/net/json/: json.c  json.h
src/oauth/: callback-server.c  callback-server.h  util.c  util.h  xbox-live.c  xbox-live.h
src/sources/: achievements-tracker-source.c  achievements-tracker-source.h  xbox_achievements_text_source.c  xbox_achievements_text_source.h
src/sources/xbox/: account.c  account.h  achievements_text_source.c  game_cover.c  game_cover_source.c  game_cover_source.h  gamerscore.c  gamerscore.h
src/text/: parsers.c  parsers.h
src/time/: time.c  time.h
src/util/: threading.c  threading.h  uuid.c  uuid.h
src/xbox/: client.c  client.h  xbox_client.c  xbox_client.h  xbox_monitor.c  xbox_monitor.h  xbox_monitoring.c  xbox_monitoring.h  xbox_session.c  xbox_session.h
test/: test_crypto.c  test_encoder.c  test_parsers.c  test_time.c  test_types.c  test_xbox_session.c  unity_config.h
test/stubs/: bmem_stub.c  obs-module.h
test/stubs/diagnostics/: log.h
test/stubs/time/: time_stub.c  time_stub.h
test/stubs/util/: bmem.h
test/stubs/xbox/: xbox_client.h  xbox_client_stub.c
wiki/: API-Reference.md  Architecture.md  Authentication-Flow.md  Development-Guide.md  Home.md  README.md  User-Guide.md  What-Is-This.md
