cmake_minimum_required(VERSION 3.28...3.30)

include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/common/bootstrap.cmake" NO_POLICY_SCOPE)

# Prefer universal OpenSSL when present (macOS)
include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/EnsureUniversalOpenSSL.cmake")

project(${_name} VERSION ${_version})

option(ENABLE_FRONTEND_API "Use obs-frontend-api for UI functionality" OFF)
option(ENABLE_QT "Use Qt functionality" OFF)

include(compilerconfig)
include(defaults)
include(helpers)

# The plugin target must exist before we can attach sources/libraries to it.
# The macOS helpers set the bundle properties later via `set_target_properties_plugin()`.
add_library(${CMAKE_PROJECT_NAME} MODULE)

find_package(libobs REQUIRED)
target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::libobs)

# HTTP client for OAuth + XBL/XSTS flows
find_package(CURL REQUIRED)
target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE CURL::libcurl)

# OpenSSL
#
# IMPORTANT (macOS universal): do NOT link against Homebrew's OpenSSL.
# On arm64 runners, Homebrew's openssl bottle is arm64-only, which breaks
# universal (arm64+x86_64) linking.
#
# obs-deps 2024+ no longer includes OpenSSL. We build a universal OpenSSL
# in .deps/openssl-universal during the CI build.
if(APPLE)
  # Ignore typical Homebrew prefixes to prevent finding arm64-only OpenSSL
  list(APPEND CMAKE_IGNORE_PREFIX_PATH "/opt/homebrew" "/usr/local")
endif()

# Prefer CONFIG mode on non-macOS.
if(NOT APPLE)
  find_package(OpenSSL CONFIG QUIET)
endif()

if(NOT TARGET OpenSSL::Crypto)
  find_package(OpenSSL REQUIRED)
endif()

# If OpenSSL resolves to Homebrew on macOS, fail early: Homebrew bottles are often single-arch.
if(APPLE)
  if(OPENSSL_CRYPTO_LIBRARY MATCHES "(/opt/homebrew|/usr/local)")
    message(
      FATAL_ERROR
      "Found Homebrew's OpenSSL at ${OPENSSL_CRYPTO_LIBRARY} which is often single-arch.\n"
      "This breaks universal (arm64+x86_64) builds.\n"
      "Install/use a universal OpenSSL (CI builds one at .deps/openssl-universal).\n"
      "CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}\n"
      "Note: BUILD_TESTING links OpenSSL too, so this must be fixed rather than ignored."
    )
  endif()
endif()

if(TARGET OpenSSL::Crypto)
  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OpenSSL::Crypto)
  if(APPLE)
    message(STATUS "Successfully linked OpenSSL::Crypto target")
  endif()
else()
  # Module mode found it but didn't create imported target - verify and link manually
  if(APPLE)
    message(STATUS "Found OpenSSL at: ${OPENSSL_CRYPTO_LIBRARY}")

    if(OPENSSL_CRYPTO_LIBRARY MATCHES "(/opt/homebrew|/usr/local)")
      message(
        FATAL_ERROR
        "Found Homebrew's OpenSSL at ${OPENSSL_CRYPTO_LIBRARY} which is arm64-only.\n"
        "This breaks universal (arm64+x86_64) builds.\n"
        "The buildspec system should have downloaded universal OpenSSL from obs-deps.\n"
        "CMAKE_PREFIX_PATH: ${CMAKE_PREFIX_PATH}\n"
        "If you see this error, Homebrew's OpenSSL may need to be uninstalled."
      )
    endif()
  endif()

  target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE ${OPENSSL_INCLUDE_DIR})
  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE ${OPENSSL_CRYPTO_LIBRARY})
endif()

if(ENABLE_FRONTEND_API)
  find_package(obs-frontend-api REQUIRED)
  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::obs-frontend-api)
endif()

if(ENABLE_QT)
  find_package(Qt6 COMPONENTS Widgets Core)
  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Qt6::Core Qt6::Widgets)
  target_compile_options(
    ${CMAKE_PROJECT_NAME}
    PRIVATE $<$<C_COMPILER_ID:Clang,AppleClang>:-Wno-quoted-include-in-framework-header -Wno-comma>
  )
  set_target_properties(
    ${CMAKE_PROJECT_NAME}
    PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON
  )
endif()

# Logging helpers (obs_log wrapper + plugin name/version)
if(TARGET diagnostics-log)
  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE diagnostics-log)
endif()

target_sources(
  ${CMAKE_PROJECT_NAME}
  PRIVATE
    src/main.c
    src/sources/achievements-tracker-source.c
    src/configuration/properties.c
    src/crypto/crypto.c
    src/net/browser/browser.c
    src/net/http/http.c
    src/net/json/json.c
    src/oauth/callback-server.c
    src/oauth/util.c
    src/oauth/xbox-live.c
    src/xbox/client.c
    src/io/state.c
    src/encoding/encoder.c
)

set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_name})

# ------------------------------
# Unit tests (Unity)
# ------------------------------
include(CTest)

if(BUILD_TESTING)
  # Unity test framework (vendored via FetchContent)
  include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/FetchUnity.cmake)

  add_executable(test_encoder tests/test_encoder.c ${unity_SOURCE_DIR}/src/unity.c src/encoding/encoder.c)

  target_include_directories(
    test_encoder
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src ${unity_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/tests
  )

  # Unity uses UNITY_INCLUDE_CONFIG_H to include a project-specific config header.
  target_compile_definitions(test_encoder PRIVATE UNITY_INCLUDE_CONFIG_H)

  # Use the same OpenSSL linkage policy as the plugin target (universal-safe on macOS).
  if(TARGET OpenSSL::Crypto)
    target_link_libraries(test_encoder PRIVATE OpenSSL::Crypto)
    if(TARGET OpenSSL::SSL)
      target_link_libraries(test_encoder PRIVATE OpenSSL::SSL)
    endif()

    # Ensure headers are available even if the imported targets don't propagate include dirs.
    if(OPENSSL_INCLUDE_DIR)
      target_include_directories(test_encoder PRIVATE ${OPENSSL_INCLUDE_DIR})
    endif()
  else()
    target_include_directories(test_encoder PRIVATE ${OPENSSL_INCLUDE_DIR})
    target_link_libraries(test_encoder PRIVATE ${OPENSSL_CRYPTO_LIBRARY})
    if(OPENSSL_SSL_LIBRARY)
      target_link_libraries(test_encoder PRIVATE ${OPENSSL_SSL_LIBRARY})
    endif()
  endif()

  # OBS memory helpers (bzalloc/bfree)
  # The unit under test uses bzalloc/bfree, so link libobs.
  target_link_libraries(test_encoder PRIVATE OBS::libobs)

  add_test(NAME test_encoder COMMAND test_encoder)
endif()
